--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -8,8 +8,8 @@
 <channel>
 	<title>
 	Comentários sobre Jornada Viagens	</title>
-	<atom:link href="https://wp-alura-dirceusljr.vercel.app/comments/feed/" rel="self" type="application/rss+xml" />
-	<link>http://wp-alura-dirceusljr.vercel.app/</link>
+	<atom:link href="https://wp-alura.vercel.app/comments/feed/" rel="self" type="application/rss+xml" />
+	<link>http://wp-alura.vercel.app/</link>
 	<description></description>
 	<lastBuildDate>Thu, 06 Apr 2023 19:08:35 +0000</lastBuildDate>
 	<sy:updatePeriod>
@@ -20,11 +20,11 @@
 	<item>
 		<title>
 		Comentário sobre Olá, mundo! por Um comentarista do WordPress		</title>
-		<link>https://wp-alura-dirceusljr.vercel.app/2023/04/06/ola-mundo/#comment-1</link>
+		<link>https://wp-alura.vercel.app/2023/04/06/ola-mundo/#comment-1</link>
 
 		<dc:creator><![CDATA[Um comentarista do WordPress]]></dc:creator>
 		<pubDate>Thu, 06 Apr 2023 19:08:35 +0000</pubDate>
-		<guid isPermaLink="false">https://wp-alura-dirceusljr.vercel.app/?p=1#comment-1</guid>
+		<guid isPermaLink="false">https://wp-alura.vercel.app/?p=1#comment-1</guid>
 
 					<description><![CDATA[Oi, isto é um comentário.
 Para iniciar a moderar, editar e excluir comentários, visite a tela Comentários no painel.
