--- a/es/comments/feed/index.html
+++ b/es/comments/feed/index.html
@@ -8,10 +8,10 @@
 <channel>
 	<title>
 	Comentarios en Jornada Viagens	</title>
-	<atom:link href="https://wp-alura-dirceusljr.vercel.app/es/comments/feed/" rel="self" type="application/rss+xml" />
-	<link>http://wp-alura-dirceusljr.vercel.app/</link>
+	<atom:link href="https://wp-alura.vercel.app/es/comments/feed/" rel="self" type="application/rss+xml" />
+	<link>http://wp-alura.vercel.app/</link>
 	<description></description>
-	<lastBuildDate>Wed, 24 Jan 2024 22:57:06 +0000</lastBuildDate>
+	<lastBuildDate>Wed, 24 Jan 2024 23:26:40 +0000</lastBuildDate>
 	<sy:updatePeriod>
 	hourly	</sy:updatePeriod>
 	<sy:updateFrequency>
