--- a/en/feed/index.html
+++ b/en/feed/index.html
@@ -9,10 +9,10 @@
 
 <channel>
 	<title>Jornada Viagens</title>
-	<atom:link href="https://wp-alura-dirceusljr.vercel.app/en/feed/" rel="self" type="application/rss+xml" />
-	<link>http://wp-alura-dirceusljr.vercel.app/</link>
+	<atom:link href="https://wp-alura.vercel.app/en/feed/" rel="self" type="application/rss+xml" />
+	<link>http://wp-alura.vercel.app/</link>
 	<description></description>
-	<lastBuildDate>Wed, 24 Jan 2024 22:57:06 +0000</lastBuildDate>
+	<lastBuildDate>Wed, 24 Jan 2024 23:26:40 +0000</lastBuildDate>
 	<language>en-US</language>
 	<sy:updatePeriod>
 	hourly	</sy:updatePeriod>
