--- a/pagina-exemplo/feed/index.html
+++ b/pagina-exemplo/feed/index.html
@@ -8,8 +8,8 @@
 <channel>
 	<title>
 	Comentários sobre: Página de exemplo	</title>
-	<atom:link href="https://wp-alura-dirceusljr.vercel.app/pagina-exemplo/feed/" rel="self" type="application/rss+xml" />
-	<link>http://wp-alura-dirceusljr.vercel.app/</link>
+	<atom:link href="https://wp-alura.vercel.app/pagina-exemplo/feed/" rel="self" type="application/rss+xml" />
+	<link>http://wp-alura.vercel.app/</link>
 	<description></description>
 	<lastBuildDate>Thu, 06 Apr 2023 19:08:35 +0000</lastBuildDate>
 	<sy:updatePeriod>
